@@ -11,38 +11,18 @@
 
 	<build>
 		<plugins>
-			<!-- This maven-compiler-plugin configuration enables the preview-mode for the preview features
-			and the incubator packages for new incubator features. -->
+			<!-- This maven-compiler-plugin configuration enables the preview-mode for the preview features 
+			and the Java 19 concurrency features that are in the incubator state-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
+					<release>19</release>
 					<compilerArgs>
 						<arg>--enable-preview</arg>
-						<arg>--add-modules</arg>
-						<arg>jdk.incubator.vector</arg>
+						<arg>--add-modules=jdk.incubator.concurrent</arg>
 					</compilerArgs>
-					<verbose>true</verbose>
-					<fork>true</fork>
-					<showDeprecation>true</showDeprecation>
-					<failOnError>true</failOnError>
-					<showWarnings>true</showWarnings>
-					<showDeprecation>true</showDeprecation>
-				</configuration>
-			</plugin>
-
-			<!-- This maven-surefire-plugin configuration enables the preview-mode for the preview features -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<includes>
-						<include>**/*Test.java</include>
-					</includes>
-					<reuseForks>true</reuseForks>
-					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
